--- a/config.lua.dist
+++ b/config.lua.dist
@@ -361,6 +361,10 @@ sortLootByChance = false
 rateUseStages = false
 lowLevelBonusExp = 50
 rateExp = 1
+-- Rate bonuses for multiple vocations in a party
+--ratePartyExp2 = 2.0
+--ratePartyExp3 = 4.0
+--ratePartyExp4 = 7.0
 rateSkill = 1
 rateLoot = 1
 rateMagic = 1
